--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <h2><strong>~ Mentorship & Coaching ~</strong></h2>
               <h2><strong>~ Leadership Training ~</strong></h2>
               <h2><strong>~ Live Better, Sell Better ~</strong></h2>
-              <h2><strong>~ Focus on the "Person" in "SalesPerson" ~</strong></h2>
+              <h2><strong>~ Focus on the Person in SalesPerson ~</strong></h2>
           </div>
           <span id="typed1"></span>
           <div><br>
