--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <div id="typed-strings2">
               <h2><strong>~ Linkedin Top Sales Voice 2020 ~</strong></h2>
               <h2><strong>~ SaaS Sales Consultant ~</strong></h2>
-              <h2><strong>~ Sales Development Executive of the Year ~</strong></h2>
+              <h2><strong>~ Sales Dev Exec of the Year ~</strong></h2>
               <h2><strong>~ Inside Sales Top 10 Sales Leader ~</strong></h2>
               <h2><strong>~ Avid Swearer ~</strong></h2>
           </div>
