--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
               <p><br>Formal Education will make you a living, Self Education will make you a fortune. ~ Jim Rohn</p>
               <p>As I've grown as a leader I have a better understanding of what truly drives behavior, motivation, and long term success. If we can make better people, the sales will follow.</p>
               <ul>
-                <li><span class="wave"><i class="ion-android-checkmark-circle"></i></span> I love scaling sales teams. I have built teams from 0-150+ reps, revenus from 0-$75M (and counting). I believe in processes and systems, paired with skill development, as the code to success.</li>
+                <li><span class="wave"><i class="ion-android-checkmark-circle"></i></span> I love scaling sales teams. I have built teams from 0~150+ reps, revenus from 0~$75M (and counting). I believe in processes and systems, paired with skill development, as the code to success.</li>
                 <li><span class="wave"><i class="ion-android-checkmark-circle"></i></span> I also love to share what I have learned, and what I am learning with others. I consult all sorts of different companies and people as they look to improve their results. I mentor and consult early, mid, and late~stage SaaS companies all across the world. Sharing my playbooks and processes for scaling sales teams successfully.</li>
-                <li><span class="wave"><i class="ion-android-checkmark-circle"></i></span> If there is a book on sales, psychology or influence I have probably read it. I am a voracious learner and am constantly pushing myself and my team to reach new heights of achievement. Because of my own internal desire to learn and grow, that also gets translated out to my team with non-stop growth, coaching and training.</li>
+                <li><span class="wave"><i class="ion-android-checkmark-circle"></i></span> If there is a book on sales, psychology or influence I have probably read it. I am a voracious learner and am constantly pushing myself and my team to reach new heights of achievement. Because of my own internal desire to learn and grow, that also gets translated out to my team with non~stop growth, coaching and training.</li>
               </ul>
             </div>
           </div>
