--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <span class="wave"><div class="icon" style="background: #fff0da;"><i class="ion-ios-bookmarks-outline" style="color: #e98e06;"></i></div></span>
               <div class="levitate">
               <h4 class="title"><a href="https://ambition.com/blog/entry/2017-11-02-100-world-class-sales-coaches-and-trainers/" target="_blank" rel="noopener noreferrer">Ambition Top 100 Sales Coaches</a></h4>
-              <p class="description">I’ll be sharing more in-depth pieces of training and playbooks across appointment setting, discovery, closing, negotiating, sales management, scripting, templates, mindset, life hacks and more.</p>
+              <p class="description">I’ll be sharing more in~depth pieces of training and playbooks across appointment setting, discovery, closing, negotiating, sales management, scripting, templates, mindset, life hacks and more.</p>
             </div>
           </div>
               </div>
@@ -251,7 +251,7 @@
         
         <header class="section-header">
           <h3>Welcome to Inside <span class="wave">Sales</span> Excellence</h3>
-          <p>Unreleased Conference Presentations & Trainings: Available nowhere else, internal pieces of training & conference presentations I’ve given over the past 7 years. 1-2 added each and every month. Updated. Improved. Re-Recorded all for this group only. Worth $1000s on their own.</p>
+          <p>Unreleased Conference Presentations & Trainings: Available nowhere else, internal pieces of training & conference presentations I’ve given over the past 7 years. 1~2 added each and every month. Updated. Improved. Re~Recorded all for this group only. Worth $1000s on their own.</p>
         </header>
 
         <div class="row">
@@ -278,7 +278,7 @@
               <div class="features wow bounceInUp clearfix">
                 <span class="wave"><i class="fa fa-object-group" style="color: #ffb774;"></i></span>
                 <h4>Monthly Book Club</h4>
-                <p>Each month we read, review, and discuss a sales book (if you want, of course - you can just steal the notes we post after even if you didn't read it...)</p>
+                <p>Each month we read, review, and discuss a sales book (if you want, of course ~ you can just steal the notes we post after even if you didn't read it...)</p>
               </div>
               
               <div class="features wow bounceInUp clearfix">
@@ -376,9 +376,9 @@
           </div>
           <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
             <div class="levitate">
-		    <a href="https://www.udemy.com/course/b2b-sales-masterclass-people-focused-selling/" target="_blank" rel="noopener noreferrer"><h4>B2B <span class="wave">Sales</span> Masterclass: People-Focused Selling</h4></a>
+		    <a href="https://www.udemy.com/course/b2b-sales-masterclass-people-focused-selling/" target="_blank" rel="noopener noreferrer"><h4>B2B <span class="wave">Sales</span> Masterclass: People~Focused Selling</h4></a>
 		  </div>
-            <p>Close deals using world-class discovery, demos, follow-up, and objection handling WITHOUT any shady or pushy tactics.</p>
+            <p>Close deals using world~class discovery, demos, follow~up, and objection handling WITHOUT any shady or pushy tactics.</p>
             <p>
                 <span class="wave"><i class="ion-android-checkmark-circle"></i></span> Foster the right mindset to confidently reach your sales goals<br>
                 <span class="wave"><i class="ion-android-checkmark-circle"></i></span> Understand your prospect and the problems they're trying to solve<br>
@@ -386,7 +386,7 @@
                 <span class="wave"><i class="ion-android-checkmark-circle"></i></span> Conduct world~class follow up that makes it easy for your prospect to buy<br>
                 <span class="wave"><i class="ion-android-checkmark-circle"></i></span> Use methods of influence to lead your prospect to the best outcome<br>
                 <span class="wave"><i class="ion-android-checkmark-circle"></i></span> Execute immaculate discovery to set yourself up for success<br>  
-                <span class="wave"><i class="ion-android-checkmark-circle"></i></span> Get buy-in and agreement to close productive next steps<br>
+                <span class="wave"><i class="ion-android-checkmark-circle"></i></span> Get buy~in and agreement to close productive next steps<br>
                 <span class="wave"><i class="ion-android-checkmark-circle"></i></span> Handle common objections and deflections with tried and true techniques<br>
             </ul>
           </div>
