--- a/index.html
+++ b/index.html
@@ -791,8 +791,8 @@
                 <ul class="list-group">
                   <li class="list-group-item">1:1 Coaching</li>
                   <li class="list-group-item">Sales Training</li>
-                  <li class="list-group-item">Consultation Speaking Events</li>
-                  <li class="list-group-item">24/7 Support System</li>
+                  <li class="list-group-item">Mentorship</li>
+                  <li class="list-group-item">Consult early, mid, and late~stage SaaS companies</li>
                 </ul>
                 <span class="wave"><a href="#" class="btn" target="_blank" rel="noopener noreferrer">Pick my Brain</a></span>
               </div>
@@ -913,6 +913,7 @@
                       <li><a href="#intro" class="scrollto">Home</a></li>
 		      <li><a href="#about" class="scrollto">Meet <span class="wave">'KD'</span></a></li>
                       <li><a href="#why-us" class="scrollto">Inside <span class="wave">Sales</span> Excellence</a></li>
+		      <li><a href="#call-to-action" class="scrollto">Get Started</a></li>
                       <li><a href="#">Terms of Service</a></li>
                       <li><a href="#">Privacy Policy</a></li>
                     </ul>
