--- a/index.html
+++ b/index.html
@@ -789,9 +789,9 @@
                   Pick my Brain
                 </h4>
                 <ul class="list-group">
-                  <li class="list-group-item">1:1 Coaching</li>
-                  <li class="list-group-item">Sales Training</li>
-                  <li class="list-group-item">Mentorship</li>
+                  <li class="list-group-item">1:1 Sales Coaching</li>
+                  <li class="list-group-item">Leadership Training</li>
+                  <li class="list-group-item">Mentorship and Consultation</li>
                   <li class="list-group-item">Consult early, mid, and late~stage SaaS companies</li>
                 </ul>
                 <span class="wave"><a href="#" class="btn" target="_blank" rel="noopener noreferrer">Pick my Brain</a></span>
