--- a/index.html
+++ b/index.html
@@ -791,6 +791,7 @@
                 <ul class="list-group">
                   <li class="list-group-item">1:1 Sales Coaching</li>
                   <li class="list-group-item">Leadership Training</li>
+                  <li class="list-group-item">Conference Presentation</li>
                   <li class="list-group-item">Mentorship and Consultation</li>
                   <li class="list-group-item">Consult early, mid, and late~stage SaaS companies</li>
                 </ul>
