--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3 class="cta-title">Monthly Live Trainings ~ Podcast ~ AMAs</h3>
-            <p class="cta-text"> Inside Sales Excellence. Live Better. Sell Better.</p>
+            <p class="cta-text"> Inside Sales Excellence. Live Better, Sell Better.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
               <span class="wave"><a class="cta-btn align-left" href="https://www.patreon.com/insidesalesexcellence" target="_blank" rel="noopener noreferrer">Indulge via Patreon</a></span>
@@ -748,7 +748,7 @@
                 </h4>
                 <ul class="list-group">
                   <li class="list-group-item">Unreleased Conference Presentations & Trainings</li>
-                  <li class="list-group-item">Private Podcast ~ Live Better. Sell Better</li>
+                  <li class="list-group-item">Private Podcast ~ Live Better, Sell Better</li>
                   <li class="list-group-item">Archived Webinars and Podcasts</li>
                   <li class="list-group-item">Direct Chat and Access</li>
                 </ul>
