--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
           </div>
 		
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">1,188</span>
+            <span data-toggle="counter-up">1,191</span>
             <p>Number of B2B Sales Masterclass Students</p>
           </div>
 
@@ -327,15 +327,15 @@
             <span data-toggle="counter-up">22</span>
             <p>Live Better, Sell Better Podcasts</p>
           </div>	
+			
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">24</span>
+            <p>Published Articles</p>
+          </div>
 		
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">81</span>
             <p>Curated Guest Appearances</p>
-          </div>
-				
-          <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">240</span>
-            <p>Published Linkedin Articles</p>
           </div>
   
         </div>
