--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@
         <div class="row counters">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">554</span>
-            <p>Patreons</p>
-          </div>
-
-          <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">142</span>
             <p>Exlusive Patreon Posts</p>
+          </div>
+		
+          <div class="col-lg-3 col-6 text-center">
+            <span data-toggle="counter-up">554</span>
+            <p>Patreon VIP Squad Member</p>
           </div>
 		
           <div class="col-lg-3 col-6 text-center">
