--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
           <div class="col-xs-12 col-lg-4">
             <div class="card">
               <div class="card-header">
-                <h3><span class="currency">$</span>59.99<span class="period">/Masterclass</span></h3>
+                <h3><span class="currency">$</span>59.99<span class="period">/Udemy</span></h3>
               </div>
               <div class="card-block">
                 <h4 class="card-title"> 
