--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 		
           <div class="col-lg-3 col-6 text-center">
             <span data-toggle="counter-up">554</span>
-            <p>Patreon VIP Squad Member</p>
+            <p>Patreon VIP Squad Members</p>
           </div>
 		
           <div class="col-lg-3 col-6 text-center">
