--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C3VSM5C13M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C3VSM5C13M');
+</script>
   <meta charset="utf-8">
   <title>Inside Sales Excellence ~ Live Better, Sell Better</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
