--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
         <div class="levitate">
-            <h1 class="text-light"><a href="#why-us" class="scrollto">Inside <span class="wave">Sales</span> Excellence</a></h1>
+            <h1 class="text-light"><a href="#why-us" class="scrollto">404 ~ Page <span class="wave">Not</span> Found</a></h1>
         </div>
         <!-- <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a> -->
       </div>
@@ -103,7 +103,6 @@
     <div class="container d-flex h-100">
       <div class="row justify-content-center align-self-center">
         <div class="col-md-6 intro-info order-md-first order-last">
-		<h2>404 Page Not Found</h2>
 		<h2><span>Welp, this is awkward... 😳</span></h2>
 		<p>The file you asked for wasn't found in this neck of the woods. Please check the URL for mistakes and try again, or contact Elvira Media.</p>
           <br>
@@ -111,7 +110,7 @@
           </div>
         </div>
   
-        <div class="col-md-6 intro-img order-md-last order-first">
+        <div class="col-md-6 intro-img order-md-last order-first"><br><br>
           <img src="img/404.png" alt="404 ~ Page Not Found" class="img-fluid">
         </div>
       </div>
