--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
         <div class="col-md-6 intro-info order-md-first order-last">
 		<h2><span>Welp, this is awkward... 😳</span></h2>
 		<p>The file you asked for wasn't found in this neck of the woods. Please check the URL for mistakes and try again, or contact Elvira Media.</p>
-          <br><br><br>
+          <br>
             <a href="https://elvira.media/404.html" class="btn-get-started" target="_blank" rel="noopener noreferrer">Elvira Media</a>
           </div>
         </div>
   
-        <div class="col-md-6 intro-img order-md-last order-first"><br><br>
+        <div class="col-md-6 intro-img order-md-last order-first"><br><br><br><br>
           <img src="img/404.png" alt="404 ~ Page Not Found" class="img-fluid">
         </div>
       </div>
