--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </div>
         </div>
   
-        <div class="col-md-6 intro-img order-md-last order-first"><br><br><br><br>
+        <div class="col-md-6 intro-img order-md-last order-first"><br><br><br>
           <img src="img/404.png" alt="404 ~ Page Not Found" class="img-fluid">
         </div>
       </div>
