--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <div class="container">
       <div class="copyright">
-	      &copy; Copyright <a href="#"><strong>Evlira Media</strong></a>. All rights reserved ~ Developed by <a href="https://abtinbidgoli.github.io/abe/" target="_blank" rel="noopener noreferrer">com.abtinbidgoli</a>
+	      &copy; Copyright <a href="#"><strong>Evlira Media</strong></a>. All rights reserved ~ Developed by <a href="https://abtinbidgoli.com" target="_blank" rel="noopener noreferrer">com.abtinbidgoli</a>
       </div>
       <div class="credits">
       </div>
